Allow Logon view to display message passed via parameter, to enable "you must log in to set ratings" type intro messages.

--- a/matte/trunk/src/messages.properties
+++ b/matte/trunk/src/messages.properties
@@ -217,6 +217,7 @@ password.edit.caption=To keep your password the same as it currently is, do not 
 timeZone.displayName=Time Zone
 timeZone.caption=Your local time zone.
 
+login.setrating=You must log in to set item ratings.
 
 ##############################################################################
 # UserBiz
