--- a/src/messages.properties
+++ b/src/messages.properties
@@ -678,6 +678,8 @@ setup.features.intro=You can configure Matte to enable or disable certain featur
 
 setup.feature.registration.displayName=Registration
 setup.feature.registration.caption=Enabling the registration feature allows anyone to create login accounts for themselves with Matte. After completing the registration process they will then be able to log into Matte and manage their own media items. You can disable this feature if you do not want people to be able to register themselves, meaning you will have to create login accounts for any person you would like to grant accounts to in Matte.
+setup.feature.upload.applet.displayName=Add Files applet
+setup.feature.upload.applet.caption=Enabling this adds the Matte Add Files Java applet on the "Add" page. This allows users to upload entire folders or groups of files without needing to zip them up manually. This requires deploying the signed applet JAR into the "applet" directory of the webapp.
 
 setup.db.title=Matte Setup: Database
 setup.db.heading=Database
