Avoid NPE for un-named album/collection data. Display "[Unnamed Album]" for example.

--- a/matte/trunk/src/messages.properties
+++ b/matte/trunk/src/messages.properties
@@ -362,6 +362,8 @@ error.remove.parent.album.notfound=Album <b>{0}</b> has no parent.
 
 preview.displayName=Preview
 
+empty.album.display.name=[Unnamed Album]
+empty.collection.display.name=[Unnamed Collection]
 
 ##############################################################################
 # Download items
