Update to sMeta 0.6 and add GPS support to Woosh theme info display.

--- a/matte/trunk/src/messages.properties
+++ b/matte/trunk/src/messages.properties
@@ -639,6 +639,13 @@ meta.video.format=Video format
 meta.video.fps=FPS
 meta.video.duration=Duration
 
+meta.gps=GPS
+meta.gps.latitude=Latitude
+meta.gps.longitude=Longitude
+meta.gps.map=Map
+meta.gps.maplink=Map it!
+meta.gps.maplink.title=Open a map to the GPS coordinates embedded in this image.
+
 ##############################################################################
 # Help
 # 
