Integrate drop-down cog menu for changing browse modes.

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -671,7 +671,7 @@ browse.author.posessive.suffix='s
 browse.items.count.single=item
 browse.items.count=items
 browse.items.itemrange=Items ranging from
-browse.mode.albums.displayName=Albums by Date
+browse.mode.albums.displayName=Date
 browse.modes.link=Alternate Views
 browse.modes.link.title=Browse these items in other ways
 
