Use actual apostrophe instead of single quote.

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -667,7 +667,7 @@ browse.album.lastupdated=Updated
 browse.album.nocomments=No comment.
 browse.album.title=Photo Albums
 browse.album.view=View album
-browse.author.posessive.suffix='s
+browse.author.posessive.suffix=\u02BCs
 browse.items.count.single=item
 browse.items.count=items
 browse.items.itemrange=Items ranging from
