--- a/matte-web/src/messages.properties
+++ b/matte-web/src/messages.properties
@@ -671,6 +671,7 @@ browse.author.posessive.suffix=\u02BCs
 browse.items.count.single=item
 browse.items.count=items
 browse.items.itemrange=Items ranging from
+browse.items.ranging=ranging from
 browse.mode.albums.displayName=Date
 browse.modes.link=Alternate Views
 browse.modes.link.title=Browse these items in other ways
